tests/fail/FloatLiteral.java
package fail;

import java.lang.System;

public class FloatLiteral {

  public static void main(String[] args ) {
    String hi = "hello";
    float hi;
  }

}
